--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: Helvetica, Arial, sans-serif;
-  min-width: 400px;
+  min-width: 600px;
   margin: 0;
   padding: 0 0 40px;
 }
@@ -113,19 +113,42 @@ body div.st-header div.st-top span.st-currency:hover {
 
 body div.st-header div.st-bottom {
   max-width: 1110px;
-  min-height: 60px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[5];
       grid-template-columns: repeat(5, 1fr);
   line-height: 15px;
+  margin: 0px auto;
+  text-align: left;
+  font-size: 14px;
+}
+
+@media (max-width: 1100px) {
+  body div.st-header div.st-bottom {
+    width: calc(100% - 14px);
+    margin: 0 7px;
+  }
+}
+
+@media (max-width: 725px) {
+  body div.st-header div.st-bottom {
+    font-size: 12px;
+  }
+}
+
+body div.st-header div.st-bottom div.st-icon-container {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 100%;
+  margin: 0px;
+  float: left;
 }
 
 body div.st-header div.st-bottom span.st-unselected {
   color: #ffffff;
   opacity: .8;
   word-break: normal;
-  line-height: 15px;
 }
 
 body div.st-header div.st-bottom span.st-unselected:hover {
@@ -133,26 +156,29 @@ body div.st-header div.st-bottom span.st-unselected:hover {
   cursor: pointer;
 }
 
-body div.st-header div.st-bottom p.st-selected {
+body div.st-header div.st-bottom span.st-selected {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 22px;
   border-bottom: 2px solid white;
 }
 
-body div.st-header div.st-bottom p.st-selected:hover {
+body div.st-header div.st-bottom span.st-selected:hover {
   cursor: no-drop;
 }
 
-body div.st-header div.st-bottom span {
-  height: 100%;
+@media (max-width: 949px) {
+  body div.st-header div.st-bottom span.st-selected {
+    height: 26px;
+  }
 }
 
 body div.st-header div.st-bottom span {
   color: white;
-  font-size: 13px;
-  line-height: 55px;
-  margin: 0 16px;
+  margin: 0;
   display: inline-block;
-  min-height: 56px;
-  padding: auto;
+  padding: 16px 0;
 }
 
 body div.st-header div.st-bottom i {
@@ -169,9 +195,10 @@ body div.st-search {
   background-color: #f7f7f7;
   margin: 0px;
   padding-top: 45px;
+  border-bottom: 1px solid #EDEDED;
 }
 
-@media (max-width: 1030px) {
+@media (max-width: 1080px) {
   body div.st-search {
     height: 410px;
   }
@@ -184,35 +211,58 @@ body div.st-search p.st-important {
   font-weight: 600;
 }
 
+@media (max-width: 1100px) {
+  body div.st-search p.st-important {
+    width: calc(100% - 14px);
+    margin: 0 7px;
+  }
+}
+
 body div.st-search p.st-description {
-  margin: 0 auto;
+  margin: 0 auto 15px;
   max-width: 1100px;
   font-size: 14px;
+}
+
+@media (max-width: 1100px) {
+  body div.st-search p.st-description {
+    width: calc(100% - 14px);
+    margin: 0 7px 15px;
+  }
 }
 
 body div.st-search div.st-search-content {
   padding: 4px;
   height: 61px;
-  margin: 0px auto;
   width: calc(100% - 10px);
   max-width: 1100px;
   background-color: #febb02;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 35% 28% 26% 11%;
-      grid-template-columns: 35% 28% 26% 11%;
-  grid-gap: 5px;
+  margin: 0 auto;
+}
+
+@media (max-width: 1100px) {
+  body div.st-search div.st-search-content {
+    width: calc(100% - 24px);
+    margin: 0 7px;
+  }
+}
+
+@media (max-width: 1080px) {
+  body div.st-search div.st-search-content {
+    height: 247px;
+  }
 }
 
 body div.st-search div.st-search-content div.st-location {
   position: relative;
   height: 52px;
   float: left;
+  width: 35%;
   min-width: 190px;
   margin: -3px 0 0 0;
 }
 
-@media (max-width: 1030px) {
+@media (max-width: 1080px) {
   body div.st-search div.st-search-content div.st-location {
     width: calc(100% - 5px);
   }
@@ -228,7 +278,7 @@ body div.st-search div.st-search-content div.st-location input {
 
 body div.st-search div.st-search-content div.st-location input:hover {
   cursor: pointer;
-  outline: 1px solid red;
+  outline: 1px solid #D59C00;
 }
 
 body div.st-search div.st-search-content div.st-location input:focus {
@@ -246,12 +296,13 @@ body div.st-search div.st-search-content div.st-location i {
 body div.st-search div.st-search-content div.st-date {
   position: relative;
   height: 52px;
+  width: 28%;
   float: left;
   min-width: 235px;
-  margin: -3px 0 0 0;
+  margin: -3px 4px 0 0;
 }
 
-@media (max-width: 1030px) {
+@media (max-width: 1080px) {
   body div.st-search div.st-search-content div.st-date {
     display: none;
   }
@@ -267,6 +318,11 @@ body div.st-search div.st-search-content div.st-date input {
 
 body div.st-search div.st-search-content div.st-date input:hover {
   cursor: pointer;
+  outline: 1px solid #D59C00;
+}
+
+body div.st-search div.st-search-content div.st-date input:focus {
+  outline: none;
 }
 
 body div.st-search div.st-search-content div.st-date i {
@@ -281,9 +337,10 @@ body div.st-search div.st-search-content div.st-low-res-date {
   display: none;
 }
 
-@media (max-width: 1030px) {
+@media (max-width: 1080px) {
   body div.st-search div.st-search-content div.st-low-res-date {
     width: 100%;
+    margin-top: 9px;
     position: relative;
     display: block;
     float: left;
@@ -305,6 +362,10 @@ body div.st-search div.st-search-content div.st-low-res-date {
   }
   body div.st-search div.st-search-content div.st-low-res-date input:hover {
     cursor: pointer;
+    outline: 1px solid #D59C00;
+  }
+  body div.st-search div.st-search-content div.st-low-res-date input:focus {
+    outline: none;
   }
   body div.st-search div.st-search-content div.st-low-res-date i {
     position: absolute;
@@ -316,6 +377,7 @@ body div.st-search div.st-search-content div.st-low-res-date {
 }
 
 body div.st-search div.st-search-content div.st-count {
+  width: 26%;
   position: relative;
   width: 26%;
   height: 52px;
@@ -328,7 +390,7 @@ body div.st-search div.st-search-content div.st-count:hover {
   cursor: pointer;
 }
 
-@media (max-width: 1030px) {
+@media (max-width: 1080px) {
   body div.st-search div.st-search-content div.st-count {
     width: 100%;
   }
@@ -344,9 +406,14 @@ body div.st-search div.st-search-content div.st-count input {
 
 body div.st-search div.st-search-content div.st-count input:hover {
   cursor: pointer;
+  outline: 1px solid #D59C00;
 }
 
-@media (max-width: 1030px) {
+body div.st-search div.st-search-content div.st-count input:focus {
+  outline: none;
+}
+
+@media (max-width: 1080px) {
   body div.st-search div.st-search-content div.st-count input {
     width: calc(100% - 68px);
   }
@@ -361,14 +428,26 @@ body div.st-search div.st-search-content div.st-count i {
 }
 
 body div.st-search div.st-search-content div.st-search-btn {
-  margin: -3px 0 0 0;
+  position: relative;
+  float: left;
+  width: calc(11% - 16px);
+  margin: 1px 0px 0 12px;
+}
+
+@media (max-width: 1080px) {
+  body div.st-search div.st-search-content div.st-search-btn {
+    width: calc(100% - 4px);
+    margin: 14px 4px 0 4px;
+  }
 }
 
 body div.st-search div.st-search-content div.st-search-btn input.st-input {
+  all: unset;
+  text-align: center;
   width: 100%;
   position: relative;
   float: left;
-  height: 59px;
+  height: 58px;
   font-size: 20px;
   padding: 0px;
   color: white;
@@ -381,12 +460,6 @@ body div.st-search div.st-search-content div.st-search-btn input.st-input:hover 
   cursor: pointer;
 }
 
-@media (max-width: 1030px) {
-  body div.st-search div.st-search-content div.st-search-btn input.st-input {
-    width: 100%;
-  }
-}
-
 body div.st-search div.st-search-content div.st-bussiness {
   float: left;
   width: 100%;
@@ -394,9 +467,26 @@ body div.st-search div.st-search-content div.st-bussiness {
   margin-top: 15px;
 }
 
-body div.st-search div.st-search-content div.st-bussiness input {
+body div.st-search div.st-search-content div.st-bussiness label.container {
+  left: -9px;
+  display: block;
+  position: relative;
+  float: left;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+body div.st-search div.st-search-content div.st-bussiness label.container input {
   height: 20px;
   width: 20px;
+}
+
+body div.st-search div.st-search-content div.st-bussiness label.container span {
+  position: relative;
+  bottom: 4px;
 }
 
 body div.st-special-offer {
@@ -452,11 +542,22 @@ body div.st-special-offer input {
   top: 89px;
 }
 
+body div.st-special-offer input:hover {
+  cursor: pointer;
+  background-color: #E5F0FF;
+}
+
 body div.st-special-offer i {
   position: absolute;
   right: 26px;
   top: 26px;
   font-size: 25px;
+  color: #707070;
+  opacity: .4;
+}
+
+body div.st-special-offer i:hover {
+  opacity: 1;
 }
 
 body div.st-images {
@@ -1168,6 +1269,12 @@ body div.st-things-holder div p.st-text {
 }
 
 body div.st-things-holder div p.st-text:hover {
+  border: 1px solid #eee;
+  white-space: normal;
+  text-align: center;
+  word-break: break-word;
+  z-index: 5;
+  height: calc(100% - 86px);
   background-color: rgba(0, 0, 0, 0.3);
   padding: 0 15px;
 }
